# stdio-socks

./: Cargo.toml  README.md  build.rs
examples/: server.rs
examples/client/: main.rs  socks.rs
proto/: multiplexer.proto3  socks.proto3
src/: bytes_io.rs  empty.rs  error.rs  lib.rs  multiplexer.rs  proto.rs  stdio.rs  utils.rs
src/multiplexer/: client.rs  memory_stream.rs  server.rs
src/proto/: address.rs  endpoint.rs  message.rs  packet.rs  request.rs  response.rs
src/utils/: bytes_io.rs  empty.rs  stdio.rs
