[package]
name = "multiplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
nom = "7"
tracing = { version = "0.1", features = ["log"] }
