[package]
name = "multiplex"
version = "0.1.3"
edition = "2021"

[features]
default = []
heartbeat = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }

[dependencies]
tokio = { version = "1", features = ["full"] }
nom = "7"
tracing = { version = "0.1", features = ["log"] }
futures = "0.3"
pin-project = "1"
